# tidas

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  LICENSE  Makefile.am  README.md  configure.ac  dev.html  example.html  genindex.html  group.html  index.html  install.html  intervals.html  intro.html  objects.inv  search.html  searchindex.js  selection.html  utils.html  volume.html
docs/: tidas.dox  (+2 more)
fixlibtool/: Makefile.am  README.md
src/apps/: Makefile.am
src/apps-mpi/: Makefile.am
src/libtidas/: CMakeLists.txt  Makefile.am  ctidas.cpp  ctidas.h  ctidas.hpp  gen_pkgconfig.sh  tidas.cpp  tidas.h  tidas.hpp  tidas_backend_getdata.cpp  tidas_backend_getdata.hpp  tidas_backend_hdf5.cpp  tidas_backend_hdf5.hpp  tidas_block.cpp  tidas_copy.cpp  tidas_dict.cpp  tidas_dict_getdata.cpp  tidas_dict_hdf5.cpp  tidas_group.c  tidas_group.cpp  tidas_group_getdata.cpp  tidas_group_hdf5.cpp  tidas_group_hdf5.hpp  tidas_indexdb.cpp  tidas_indexdb_mem.cpp  tidas_indexdb_sql.cpp  tidas_internal.h  tidas_internal.hpp  tidas_intervals.c  tidas_intervals.cpp  tidas_intervals_getdata.cpp  tidas_intervals_hdf5.cpp  tidas_schema.c  tidas_schema.cpp  tidas_schema_getdata.cpp  tidas_schema_hdf5.cpp  tidas_test.cpp  tidas_utils.c  tidas_utils.cpp  tidas_volume.cpp
src/libtidas-mpi/: CMakeLists.txt  Makefile.am  ctidas_mpi.cpp  ctidas_mpi.h  ctidas_mpi.hpp  tidas_mpi.cpp  tidas_mpi.hpp  tidas_mpi_internal.hpp  tidas_mpi_test.cpp  tidas_mpi_volume.cpp  tidas_test_mpi.cpp
src/libtidas-mpi/include/tidas/: mpi.hpp  mpi_volume.hpp
src/libtidas-mpi/src/: ctidas_mpi.cpp  tidas_mpi.cpp  tidas_mpi_internal.hpp  tidas_mpi_volume.cpp
src/libtidas-mpi/tidas/: mpi_test.hpp  mpi_volume.hpp
src/libtidas/capi/: Makefile.am  ctidas.cpp  ctidas.h
src/libtidas/core/: Makefile.am  tidas.cpp  tidas.hpp  tidas_backend_getdata.cpp  tidas_backend_getdata.hpp  tidas_backend_hdf5.cpp  tidas_backend_hdf5.hpp  tidas_block.cpp  tidas_copy.cpp  tidas_dict.cpp  tidas_dict_getdata.cpp  tidas_dict_hdf5.cpp  tidas_group.cpp  tidas_group_getdata.cpp  tidas_group_hdf5.cpp  tidas_group_hdf5.hpp  tidas_indexdb_mem.cpp  tidas_indexdb_sql.cpp  tidas_internal.hpp  tidas_intervals.cpp  tidas_intervals_getdata.cpp  tidas_intervals_hdf5.cpp  tidas_schema.cpp  tidas_schema_getdata.cpp  tidas_schema_hdf5.cpp  tidas_utils.cpp  tidas_volume.cpp
src/libtidas/core/tidas/: block.hpp  copy.hpp  dict.hpp  group.hpp  indexdb.hpp  intervals.hpp  schema.hpp  utils.hpp  volume.hpp
src/libtidas/include/tidas/: block.hpp  copy.hpp  dict.hpp  group.hpp  indexdb.hpp  intervals.hpp  narray.hpp  schema.hpp  tidas.hpp  utils.hpp  volume.hpp
src/libtidas/include/tidas/cereal/: access.hpp  cereal.hpp  macros.hpp  update_includes.sh
src/libtidas/include/tidas/cereal/archives/: adapters.hpp  binary.hpp  json.hpp  portable_binary.hpp  xml.hpp
src/libtidas/include/tidas/cereal/details/: helpers.hpp  polymorphic_impl.hpp  static_object.hpp  traits.hpp
src/libtidas/include/tidas/cereal/types/: array.hpp  base_class.hpp  bitset.hpp  boost_variant.hpp  common.hpp  deque.hpp  forward_list.hpp  list.hpp  map.hpp  memory.hpp  polymorphic.hpp  queue.hpp  set.hpp  stack.hpp  string.hpp  tuple.hpp  unordered_map.hpp  unordered_set.hpp  utility.hpp  valarray.hpp  vector.hpp
src/libtidas/include/tidas/cereal/types/concepts/: pair_associative_container.hpp
src/libtidas/libre2/: Makefile.am
src/libtidas/re2/: Makefile.am  benchmark.cc  bitstate.cc  compile.cc  dfa.cc  filtered_re2.cc  mimics_pcre.cc  nfa.cc  onepass.cc  parse.cc  perl_groups.cc  prefilter.cc  prefilter_tree.cc  prog.cc  re2.cc  regexp.cc  set.cc  simplify.cc  stringpiece.cc  strutil.cc  tostring.cc  unicode_casefold.cc  unicode_groups.cc
src/libtidas/re2/tidas/re2/: filtered_re2.h  prog.h  re2.h  regexp.h  set.h  walker-inl.h
src/libtidas/re2/util/: pcre.h
src/libtidas/sqlite/: LICENSE  Makefile.am  VERSION  shell.c
src/libtidas/sqlite/tidas/: sqlite3ext.h
src/libtidas/src/: sqlite_VERSION  tidas.cpp  tidas_backend_getdata.cpp  tidas_backend_getdata.hpp  tidas_backend_hdf5.cpp  tidas_backend_hdf5.hpp  tidas_block.cpp  tidas_copy.cpp  tidas_dict.cpp  tidas_dict_getdata.cpp  tidas_dict_hdf5.cpp  tidas_group.cpp  tidas_group_getdata.cpp  tidas_group_hdf5.cpp  tidas_group_hdf5.hpp  tidas_indexdb_mem.cpp  tidas_indexdb_sql.cpp  tidas_internal.hpp  tidas_intervals.cpp  tidas_intervals_getdata.cpp  tidas_intervals_hdf5.cpp  tidas_narray.cpp  tidas_schema.cpp  tidas_schema_getdata.cpp  tidas_schema_hdf5.cpp  tidas_test.hpp  tidas_test_block.cpp  tidas_test_dict.cpp  tidas_test_group.cpp  tidas_test_intervals.cpp  tidas_test_runner.cpp  tidas_utils.cpp  tidas_volume.cpp
src/libtidas/test/: Makefile.am  tidas_test.hpp  tidas_test_block.cpp  tidas_test_cereal.cpp  tidas_test_dict.cpp  tidas_test_group.cpp  tidas_test_indexdb.cpp  tidas_test_intervals.cpp  tidas_test_runner.cpp  tidas_test_schema.cpp  tidas_test_utils.cpp  tidas_test_volume.cpp
src/libtidas/test/gtest/: Makefile.am
src/libtidas/tidas/: block.h  block.hpp  copy.hpp  dict.hpp  group.h  group.hpp  index.hpp  indexdb.hpp  intervals.h  intervals.hpp  schema.h  schema.hpp  utils.h  utils.hpp  volume.h  volume.hpp
src/python/: CMakeLists.txt  Makefile.am  __init__.py  block.py  ctidas.py  ctidas.py.in  ctidas_mpi.py.in  gen_python.sh  group.py  intervals.py  mpi.py  mpi_volume.py  pytidas-mpi.cpp  pytidas.cpp  test.py  volume.py
src/python/apps/: CMakeLists.txt  tidas
src/python/ui/: __init__.py  block.py  plot.py  tree.py  utils.py
src/python/ui/pyqtgraph/: README.txt
src/tests/: CMakeLists.txt  Makefile.am  tidas_test.c  tidas_test.cpp  tidas_test.h  tidas_test.hpp  tidas_test_block.cpp  tidas_test_cereal.cpp  tidas_test_dict.cpp  tidas_test_group.cpp  tidas_test_indexdb.cpp  tidas_test_intervals.c  tidas_test_intervals.cpp  tidas_test_runner.cpp  tidas_test_schema.cpp  tidas_test_utils.c  tidas_test_utils.cpp  tidas_test_volume.cpp
src/tests-mpi/: CMakeLists.txt  tidas_mpi_test.cpp  tidas_mpi_test.hpp  tidas_test_mpi.cpp
src/tests/gtest/: Makefile.am  VERSION
src/tests/gtest/googlemock/: CMakeLists.txt
(+50 files in other folders)
